--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -88,12 +88,12 @@ show_related = {book = true, page = false, post = true, project = true, publicat
 ############################
 
 # Enter contact details (optional). To hide a field, clear it to "".
-email = "y.qian@qmul.ac.uk"
+email = "yifan.qian1@kellogg.northwestern.edu"
 # phone = "888 888 88 88"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "Queen Mary University of London, Mile End Road", city = "London", region = "", postcode = "E1 4NS", country = "United Kingdom", country_code = "UK"}
+address = {street = "600 Foster Street", city = "Evanston", region = "", postcode = "60208", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
