--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -93,7 +93,7 @@ email = "yifan.qian1@kellogg.northwestern.edu"
 
 # Address
 # For country_code, use the 2-letter ISO code (see https://en.wikipedia.org/wiki/ISO_3166-1_alpha-2 )
-address = {street = "600 Foster Street", city = "Evanston", region = "Illinois", postcode = "60208", country = "United States", country_code = "US"}
+address = {street = "1800 Sherman Ave", city = "Evanston", region = "IL", postcode = "60201", country = "United States", country_code = "US"}
 
 # Geographic coordinates
 # To get your coordinates, right-click on Google Maps and choose "What's here?". The coords will show up at the bottom.
